<resources>
    <string name="app_name">Unimagdalena</string>
    <string name="codigo">Codigo</string>
    <string name="nombre">Nombre</string>
    <string name="programa">Programa</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="Listado">Listado</string>
    <string name="editar">Editar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="agregar">Agregar</string>
</resources>