<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="211dp"
            android:layout_height="66dp"
            android:layout_marginLeft="100dp"
            android:gravity="center"
            android:text="@string/editar"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="25dp"
            android:text="@string/codigo"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/cod"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:text="TextView"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="10dp"
            android:text="@string/nombre"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edtmnombre"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="10dp"
            android:text="@string/programa"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edtmprograma"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="24sp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnmodi"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/modificar"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnelim"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/eliminar"
                    android:textSize="20sp" />
            </LinearLayout>


        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>